# matterbase

./: .gitattributes  .gitignore  ARCHITECTURE.md  LICENSE  NU-QUERIES.md  README.md  SQL-QUERIES.md  go.mod  go.sum  matterbase.yml  pyproject.toml
basekit/cycler/: cycler.go  cycler_test.go
basekit/exec/: exec.go  exec_test.go
basekit/frame/: frame.go  frame_test.go  sanitize_test.go
basekit/input/: input.go  input_test.go
basekit/preview/: preview.go  preview_test.go
basekit/recordtable/: recordtable.go  recordtable_test.go
basekit/theme/: theme.go
basekit/togglelist/: togglelist.go  togglelist_test.go
cmd/demo/: main.go
cmd/matterbase/: config.go  config_test.go  content.go  content_test.go  frame_invariant_test.go  grubber.go  grubber_test.go  integration_test.go  main.go  pipeline.go  pipeline_test.go  preview.go  query.go  query_test.go  sqlform_test.go  view_test.go
cmd/taskbase/: data.go  frame_invariant_test.go  main.go
matterbase/: __init__.py  __main__.py  app.py  content.py  grubber_client.py  init_config.py  pipeline.py  preview.py  query.py  widgets.py
tests/: test_config.py  test_content.py  test_grubber_client.py  test_pipeline.py  test_query.py
