[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matterbase"
version = "0.3.0"
description = "Keyboard-driven terminal UI for browsing and filtering structured Markdown notes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "rhsev", email = "huelsmann@sevelen.net" }
]
keywords = ["markdown", "notes", "tui", "terminal", "yaml", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Text Editors",
]
dependencies = [
    "textual>=0.80.0",
    "pyyaml",
    "rich",
    "pypdf",
    "python-docx",
    "duckdb",
]

[project.urls]
Homepage = "https://github.com/rhsev/matterbase"
Repository = "https://github.com/rhsev/matterbase"
Issues = "https://github.com/rhsev/matterbase/issues"

[project.scripts]
matterbase = "matterbase:main"

[tool.setuptools.packages.find]
# auto-discovers the 'matterbase' package

[tool.pytest.ini_options]
testpaths = ["tests"]
